bitbucket-readable-commit-messages: avoid commit lists
Style bitbucket-readable-commit-messages.user.css uses
regexp("https://bitbucket.org/.*/commits/.+") to avoid being enabled on
the page ".../commits/" of repositories.[1]  However, this isn't enough,
because there are listings of commits with URLs that don't end with
"/commits/", like the next page of the commits list.[2]

Exclude commit list pages in the selectors for commit message container
by using attribute "data-qa" which is only present on the pages for
lists of commits.  There isn't much going on in HTML of commit pages, so
we have to use negation with a ":not(...)" selector.

[1] e.g. https://bitbucket.org/andreyrybak/atlassian-tweaks/commits/
[2] e.g. https://bitbucket.org/andreyrybak/atlassian-tweaks/commits/?page=2

--- a/bitbucket-readable-commit-messages.user.css
+++ b/bitbucket-readable-commit-messages.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Bitbucket: readable commit messages
 @namespace   https://github.com/rybak/atlassian-tweaks
-@version     3
+@version     4
 @description Make commit messages on Bitbucket Cloud more readable
 @license     MIT
 @homepageURL https://github.com/rybak/atlassian-tweaks
@@ -37,26 +37,26 @@
  * SOFTWARE.
  */
 
-@-moz-document regexp("https://bitbucket.org/.*/commits/.+") {
+@-moz-document regexp("https://bitbucket.org/.*/commits/[^?]+") {
 /*
  * Fixes for readability
  */
 
 /* border around the whole commit message */
-.css-1120ym1 > div:nth-child(1) > div:nth-child(3) {
+.css-1120ym1 > div:nth-child(1) > div:nth-child(3):not([data-qa="commit-list-container"]) {
 	border: borderWidth solid borderColor;
 	border-radius: borderRadius;
 	padding: paddingSize;
 }
 if monospaceEnable {
 	/* monospace text */
-	.css-1120ym1 > div:nth-child(1) > div:nth-child(3) {
+	.css-1120ym1 > div:nth-child(1) > div:nth-child(3):not([data-qa="commit-list-container"]) {
 		font-family: monospace;
 	}
 }
 
 /* make the subject line of commit message bold */
-.css-1120ym1 > div:nth-child(1) > div:nth-child(3) > p:first-child {
+.css-1120ym1 > div:nth-child(1) > div:nth-child(3):not([data-qa="commit-list-container"]) > p:first-child {
 	font-weight: bold;
 }
 }
